@@ -1,5 +1,7 @@
 Version 2.9.2dev:
 
+* Try ralphschmidt-cyberstorm-ppc-4471.rom if cyberstormppc.rom is not found.
+* Fix file name when saving controller configs on macOS.
 * Fix configurations not showing up since 2.9.1dev.
 * Indicate unpublished variants in variants list.
 * When enabling "unpublished" entries, list unpublished variants last.
